--- a/BackendAPI/appsettings.json
+++ b/BackendAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "mssql": "Server=194.31.52.242;Database=testproductdb;Uid=sa;Pwd=:/Karabiner200;Encrypt=False"
+    "mssql": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=PantryDataBase;Integrated Security=True"
   }
 }
